# claude-code-arcane

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md  bash.exe.stackdump  package-lock.json  package.json  pyproject.toml  setup.sh  vitest.config.ts
.claude/: remove-skill-junctions.bat  settings.json  settings.local.json  setup-skill-junctions.bat  statusline.sh
arcane/: cli.py  installer.py  profiles.py
claude_arcane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: RELEASE-SETUP.md  SKILLS-CATALOG.md  USER-GUIDE.md  agent-hierarchy.md  collaborative-design.md  context-management.md  division-structure.md  technical-preferences.md  trusted-publishing-setup.md
hooks/: check-update.sh  detect-division.sh  detect-gaps.sh  log-agent-stop.sh  log-agent.sh  notify.sh  post-compact.sh  pre-compact.sh  session-start.sh  session-stop.sh  statusline.sh  validate-assets.sh  validate-commit.sh  validate-push.sh  validate-secrets.sh  validate-skill-change.sh
profiles/: agile.profile  agile.yaml  ai.profile  ai.yaml  android-native.profile  android-native.yaml  backend-dotnet.yaml  backend-go.profile  backend-go.yaml  backend-nestjs.yaml  backend-nextjs.yaml  backend-ts.profile  backend-ts.yaml  business.profile  business.yaml  clevel.profile  clevel.yaml  clickup.profile  clickup.yaml  core.profile  core.yaml  database.profile  database.yaml  design.profile  design.yaml  docs.profile  docs.yaml  ecommerce.yaml  finance.profile  finance.yaml  flutter.profile  flutter.yaml  frontend.profile  frontend.yaml  infra.profile  infra.yaml  (+27 more)
(+1125 files in other folders)
