[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-arcane"
version = "1.0.0"
description = "CLI to deploy Claude Code skills, rules, hooks and agents to any project"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
arcane = "arcane.cli:main"

[tool.setuptools.packages.find]
include = ["arcane*"]
